# imageProcessor

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
include/: generateId.h  imageProcessor.h  server.h  session.h
src/: generateId.cpp  imageProcessor.cpp  server.cpp  session.cpp
